cloudforge-k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: cloudforge

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend

        image: ACCOUNT_ID.dkr.ecr.ap-south-1.amazonaws.com/cloudforge-backend:latest

        ports:
        - containerPort: 8000

        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"

          limits:
            memory: "512Mi"
            cpu: "500m"

          periodSeconds: 5
