cloudforge-k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: cloudforge

spec:
  selector:
    app: backend

  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000

  type: ClusterIP
